Speed-up building Projucer with CMake
Before:
Benchmark #1: D:/dev/bin/cmake-3.14.7/bin/cmake.exe --build . --target Projucer
  Time (mean ± σ):     127.188 s ± 11.222 s    [User: 1.4 ms, System: 4.7 ms]
  Range (min … max):   115.226 s … 143.630 s    10 runs

After:
Benchmark #1: D:/dev/bin/cmake-3.14.7/bin/cmake.exe --build . --target Projucer
  Time (mean ± σ):     32.503 s ±  0.557 s    [User: 0.0 ms, System: 1.3 ms]
  Range (min … max):   32.025 s … 33.628 s    10 runs

Thus a speed-up of almost x4.

--- a/extras/Projucer/CMakeLists.txt
+++ b/extras/Projucer/CMakeLists.txt
@@ -160,3 +160,6 @@ target_link_libraries(Projucer PRIVATE
     juce::juce_build_tools
     juce::juce_cryptography
     juce::juce_gui_extra)
+
+target_compile_options(Projucer PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/MP>)
+target_compile_options(ProjucerData PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/MP>)
